--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,11 +13,11 @@
             {% for task in tasks %}
                 <li>
                     <span>{{ task.title }}</span>
-                    <a class="delete-btn" href="{{ url_for('delete', id=task.id) }}">Delete</a>
+                    <a class="delete-btn" href="{{ url_for('tasks.delete', id=task.id) }}">Delete</a>
                 </li>
             {% endfor %}
         </ul>
-        <form class="add-form" action="{{ url_for('add') }}" method="post">
+        <form class="add-form" action="{{ url_for('tasks.add') }}" method="post">
             <label for="title">New Task:</label>
             <input type="text" id="title" name="title" required>
             <button type="submit">Add</button>
